src/App.css
main {
  text-align: center;
}

img {
  border-radius: 12px;
}

.App-header {
  align-items: center;
  background-color: #0E61AB;
  color: white;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  z-index: 4;
}

.App-header-link {
  background-color: inherit;
  text-decoration: none;
  border: none;
  cursor: pointer;
  font-size: 1.2rem;
  padding: 1rem;
  text-align: center;
  color: white;
}

.App-header-link:hover {
  color: #1CB4DF;
}

.App-header-link:disabled {
  color: white;
  outline: 1px solid white;
  outline-offset: -8px;
  border-radius: 50%;
  cursor: default ;
}

.background {
  display: flex;
  justify-content: space-evenly;
  align-items: flex-end;
}

.background-card {
  width: "40%"
}

.black {
  color: black;
}

.header-button {
  background-image: url('./assets/menu.svg');
  bottom: 200px;
  z-index: 2;
}

.home {
  box-sizing: border-box;
  overflow-y: auto;
  width: 100%;
}

.profile {
  display: inline-block;
  border: 5px solid #0E61AB;
  border-radius: 50%;
  width: 25%;
  animation: flip-out 0.5s backwards ease-in-out;
}

.profile:hover {
  animation: flip-in 0.5s ease-in-out forwards;
}

.description {
  display: flex;
  flex-direction: column;
  font-size: 2.2vw;
  justify-content: flex-start;
  padding: 0 1em;
  overflow-y: auto;
  width: 50%;
}

.project-list {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  justify-items: center;
  list-style: none;
  margin: 1em 0;
  padding: 0;
  width: 100%;
}

.project-item {
  cursor: pointer;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  margin: 1em;
  max-width: 60%;
  min-width: 20%;
  padding: 0 0 1em;
  width: 300px;
  animation: zoom-out 0.5s ease-in-out both;
}

.project-item:hover {
  opacity: 0.9;
  animation: zoom-in 0.5s ease-in-out both;
}

.project-item > p, .project-item > a {
  padding: 0 1em;
}

.resumee {
  align-items: center;
  background-image: url('./assets/bubble.svg');
  background-position: left;
  background-repeat: no-repeat;
  display: flex;
  margin: 2em 0;
  padding: 0 0 0 1em;
  text-align: center;
  width: 100%;
}

.subtitle {
  font-size: larger;
  color: lightgray;
}

.section {
  padding-top: 8rem;
}

.slider {
  height: 100px;
  margin: auto;
  overflow-x: auto;
  position: relative;
  width: 80%;
}

.slider-track {
  display: flex;
}

.slide {
  overflow: hidden;
  height: 100px;
}

@media (prefers-reduced-motion: no-preference) {
  a, button {
    transition: color 0.5s ease-in-out;
  }

  .slider {
    overflow: hidden;
  }

  .slider-track {
    animation: scroll 20s linear infinite;
  }
}

@media (min-width: 768px), (orientation: landscape) {
  .project-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 1em;
  }
}

@keyframes flip-in {
  0% {
    transform: rotateY(0)
  }
  100% {
    background-size: cover;
    background-image: url('./assets/pixel-caboclo.svg');
    transform: rotateY(180deg);
  }
}

@keyframes flip-out {
  0%{
    background-size: cover;
    background-image: url('./assets/pixel-caboclo.svg');
    transform: rotateY(180deg)
  }
  100% {
    transform: rotateY(0);
  }
}

@keyframes zoom-in {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(1.1);
  }
}

@keyframes zoom-out {
  0% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

 /* slide length * number of slides */
@keyframes scroll {
  0% { transform: translateX(0) }
  100% { transform: translateX(calc(-250px * 17))}
}

